hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_generic.php.like_types.exp
File "explicit_type_collection_generic.php", line 4, characters 10-23:
Some elements in this collection are incompatible (Typing[4110])
File "explicit_type_collection_generic.php", line 4, characters 14-14:
Expected T
File "explicit_type_collection_generic.php", line 3, characters 15-15:
But got dynamic because it is an unenforceable type
