hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_generic.php
<?hh

function f<T>(T $value): vec<T> {
  return vec<T>[$value];
}
